Image Picker for D7 in 7.x-1.x, 20011-04-20
------------------------------------
by hutch, fixed bug in imagepicker_file_unmanaged_copy, #1111184

Image Picker for D7 in 7.x-1.x, 20011-04-02
------------------------------------
by hutch, fixed doubleslash bug, #1111184

Image Picker for D7 in 7.x-1.x, 20011-03-31
------------------------------------
by hutch, cleanup for new release

Image Picker for D7 in 7.x-1.x, 20011-03-20
------------------------------------
by hutch, fixed bug in gallery block paths
  added Total users to stats

Image Picker for D7 in 7.x-1.x, 20011-03-17
------------------------------------
by hutch, fixed postgres bug, #1083064
  fixed wysiwyg bug in iframe js

Image Picker for D7 in 7.x-1.x, 20011-03-06
------------------------------------
by hutch, moved some functions back to imagepicker.module

Image Picker for D7 in 7.x-1.x, 20011-03-05
------------------------------------
by hutch, added private download support

Image Picker for D7 in 7.x-1.x, 20011-02-27
------------------------------------
by hutch, removed old cvs keyword

Image Picker  for D7 in DRUPAL-7--1, 20011-02-21
------------------------------------
by hutch, fixed duplicate names bug #1068466 reported by codeforkjeff

Image Picker  for D7 in DRUPAL-7--1, 20011-02-17
------------------------------------
by hutch, reorganised functions for reduced footprint

Image Picker  for D7 in DRUPAL-7--1, 20011-02-07
------------------------------------
by hutch, block bug #1054056

Image Picker  for D7 in DRUPAL-7--1, 20011-01-29
------------------------------------
by hutch, improved gallery blocks

Image Picker  for D7 in DRUPAL-7--1, 20011-01-26
------------------------------------
by hutch, added gallery blocks

Image Picker  for D7 in DRUPAL-7--1, 20011-01-22
------------------------------------
by hutch, fixed jpeg quality issue #1036216
  fixed rows per page bug #1038288

Image Picker  for D7 in DRUPAL-7--1, 20011-01-22
------------------------------------